# Kpn

./: app.py  auth_helpers.py  conversation.md  cookies.txt  extensions.py  models.py  pyproject.toml  replit.md  requirements.txt  seed_data.py
assets/: Karantani.nine  deployment-guide.md  end-to-end-verification-log.md  functional-verification-report.md
attached_assets/: overview_1758635637085.docx  overview_1758636176104.docx
blueprints/: campaigns.py  core.py  disciplinary.py  donations.py  duty_logs.py  events.py  leadership.py  media.py  registration.py  staff.py
git.gi/: COMMIT_EDITMSG  index
git.gi/logs/: HEAD
instance/: kpn2020.db
static/css/: print.css  role-specific.css
templates/: base.html  upload.html
templates/campaigns/: create.html  list.html  manage.html  view.html
templates/core/: about.html  code_of_conduct.html  contact.html  faq.html  home.html  join.html  leadership.html  media.html  news.html  support.html
templates/disciplinary/: create.html  list.html
templates/donations/: add.html  list.html  manage.html
templates/duty_logs/: create_duty.html  manage_duties.html  view_duties.html
templates/events/: create.html  list.html  manage.html
templates/leadership/: approvals.html
templates/media/: gallery.html  manage.html  upload.html
templates/registration/: facebook_verification.html  register.html
templates/staff/: admin_dashboard.html  auditor_general_dashboard.html  edit_profile.html  enhanced_admin_dashboard.html  forgot_password.html  (+11 more)
utils/: activity_tracker.py  cache_utils.py  email_service.py  image_utils.py
(+3 files in other folders)
