[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-caching>=2.3.1",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pillow>=11.3.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
]
